--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	</head>
-	<body>
-		<h1>Hello, world!</h1>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<link rel="stylesheet" href="style.css">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	</head>
+	
+	<template id="equation">
+		<tr>
+			<td><button id="equation-button" class="nohover btn bi bi-graph-up fs-3"></button></td>
+			<td class="w-100"><input type="text" class="form-control"></td>
+			<td class="w-auto"><button id="equation-delete" class="nohover btn text-danger bi bi-x-lg" style="border: none !important;"></button></td>
+		</tr>
+	</template>
+	
+	<body>
+		<div class="border-end d-flex flex-column" style="width: 30vw; height: 100vh;">
+			<table id="equation-table" class="table align-middle table-sm">
+				<!-- Table does not generate a <tbody> unless it has something in it -->
+				<tr>
+				</tr>
+			</table>
+			<div onclick="equaTable.addEquation()" class="h-100">
+				<button class="nohover btn fs-3 text-primary bi-plus-lg position-relative start-50 translate-middle" style="border: none !important;"></button>
+			</div>
+		</div>
+		<script src="equation-table.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
