--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 			<div id="equation-container" class="border-end d-flex flex-column">
 				<div class="w-100 border-bottom border-3 bg-dark-subtle">
 					<button onclick="display.resetCamera()" class="bi bi-house btn text-info nohover fs-3" style="float: right;"></button>
-					<button onclick="equaTable.save()" class="bi bi-floppy btn text-success nohover fs-3"></button>
-					<button onclick="equaTable.load()"class="bi bi-upload btn text-warning nohover fs-3"></button>
+					<button onclick="display.camera.fixAspectRatio()" class="bi bi-aspect-ratio btn text-success nohover fs-3" style="float: right;"></button>
+					<button onclick="save()" class="bi bi-floppy btn text-primary-emphasis nohover fs-3"></button>
+					<button onclick="load()" class="bi bi-upload btn text-warning nohover fs-3"></button>
+					<button onclick="unsave()" class="bi bi-trash btn text-danger nohover fs-3"></button>
 				</div>
 				<table id="equation-table" class="table align-middle table-sm">
 					<!-- Table does not generate a <tbody> unless it has something in it -->
@@ -95,13 +97,13 @@
 				float neg = 0.0;
 				float pos = 0.0;
 				uint rand = uint(gl_FragCoord.x * 256.0 + gl_FragCoord.y);
-				for(int i = 0; i < 50; i++) {
-					vec2 p = _pixToCoord(gl_FragCoord.xy + _randOffset(rand));
+				for(int i = 0; i < 5; i++) {
+					vec2 p = _pixToCoord(gl_FragCoord.xy + offsets[i]);
 					float v = _func(p);
 					if(v < 0.0) neg += 1.0;
 					if(v >= 0.0) pos += 1.0;
 				}
-				float line = (neg * pos) / 625.0;
+				float line = (neg * pos) / 6.0;
 				_fragColor = vec4(_color, line * 1.5);
 			}
 		</script>
