--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<body style="overflow: hidden">
 		<div id="container" class="bg-dark-subtle">
-			<div id="equation-container" class="border-end d-flex flex-column">
+			<div id="toolbar-equation-container">
 				<div class="w-100 border-bottom border-3 bg-dark-subtle">
 					<button onclick="display.resetCamera()" class="bi bi-house btn text-info nohover fs-3" style="float: right;"></button>
 					<button onclick="display.camera.fixAspectRatio()" class="bi bi-aspect-ratio btn text-success nohover fs-3" style="float: right;"></button>
@@ -32,12 +32,14 @@
 					<button onclick="load()" class="bi bi-upload btn text-warning nohover fs-3"></button>
 					<button onclick="unsave()" class="bi bi-trash btn text-danger nohover fs-3"></button>
 				</div>
-				<table id="equation-table" class="table align-middle table-sm">
-					<!-- Table does not generate a <tbody> unless it has something in it -->
-					<tr id="ignore"></tr>
-				</table>
-				<div onclick="equaTable.makeEquation()" class="h-100">
-					<button class="nohover btn fs-3 text-primary bi-plus-lg position-relative start-50 translate-middle"></button>
+				<div id="equation-container" class="border-end d-flex flex-column">
+					<table id="equation-table" class="table align-middle table-sm">
+						<!-- Table does not generate a <tbody> unless it has something in it -->
+						<tr id="ignore"></tr>
+					</table>
+					<div onclick="equaTable.makeEquation()" class="h-100">
+						<button class="nohover btn fs-3 text-primary bi-plus-lg position-relative start-50 translate-middle"></button>
+					</div>
 				</div>
 			</div>
 			<div style="width: 100%; height: 100%;">
