--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			uniform vec2 _resolution;
 			uniform vec4 _bounds;
 			uniform vec3 _color;
+			uniform vec3 _invColor;
 			
 			out vec4 _fragColor;
 			
@@ -63,24 +64,6 @@
 				float x = _p.x;
 				float y = _p.y;
 				return FUNCTION;
-			}
-			
-			uint _hash(uint x) {
-				x ^= x >> 16;
-				x *= 0x7feb352dU;
-				x ^= x >> 15;
-				x *= 0x846ca68bU;
-				x ^= x >> 16;
-				return x;
-			}
-			
-			vec2 _randOffset(inout uint rand) {
-				rand = _hash(rand);
-				vec2 off = vec2(
-					float(rand & 0xFFFFu) / 65536.0,
-					float((rand >> 16) & 0xFFFFu) / 65536.0
-				) - 0.5;
-				return off * 1.0;
 			}
 			
 			vec2 _pixToCoord(vec2 p) {
@@ -92,69 +75,52 @@
 			}
 			
 			const vec2[] offsets = vec2[](
-				vec2(0.0, 0.0),
 				vec2(0.0, 1.0),
 				vec2(1.0, 0.0),
 				vec2(0.0, -1.0),
-				vec2(-1.0, 0.0)
+				vec2(-1.0, 0.0),
+				vec2(0.0, 0.0)
 			);
 			
-			float _gridSampleMethod(vec2 pix) {
+			vec4 _gridSampleMethod(vec2 pix) {
 				float neg = 0.0;
 				float pos = 0.0;
 				for(int i = 0; i < 5; i++) {
 					vec2 p = _pixToCoord(pix + offsets[i]);
 					float v = _func(p);
-					if(v < 0.0) neg += 1.0;
+					if(v <= 0.0) neg += 1.0;
 					if(v >= 0.0) pos += 1.0;
 				}
-				return (neg * pos) / 1.0;
+				return vec4(_color, (neg * pos) / 4.5);
 			}
 			
-			vec2 numDeriv(vec2 p) {
-				vec2 e = 0.0001 * abs(p);
-				float dx = _func(p + vec2(e.x, 0.0)) - _func(p - vec2(e.x, 0.0));
-				float dy = _func(p + vec2(0.0, e.y)) - _func(p - vec2(0.0, e.y));
-				return vec2(dx, dy) / (2.0 * e);
+			float isoRound(float v) {
+				if(v == 0.0) return 1.0;
+				return (v > 0.0) ? ceil(v) : floor(v);
 			}
 			
-			float _gradientDescentMethod(vec2 pix) {
-				uint rand = uint(gl_FragCoord.x) ^ (uint(gl_FragCoord.y) << 16);
-				vec2 p = _pixToCoord(pix + _randOffset(rand));
-				vec2 pixCoord = _pixToCoord(pix);
-				vec2 size = _bounds.zw - _bounds.xy;
-				float aspX = sqrt(size.x / size.y);
-				float aspY = 1.0 / aspX;
-				vec2 asp = vec2(aspX, aspY);
-				
-				float val = _func(p);
-				if(val == 0.0) return 1.0;
-				
-				float weight = abs(val);
-				float targDir = -sign(val);
-				for(int i = 0; i < 5; i++) {
-					vec2 grad = numDeriv(p);
-					p += (grad * asp * targDir);
-					vec2 pPix = _coordToPix(p);
-					vec2 rel = pPix - pix;
-					rel *= asp;
-					float d2 = rel.x * rel.x + rel.y * rel.y;
-					if(d2 > 1.0) {
-						float d = sqrt(d2);
-						rel /= d;
-						pPix = pix + rel;
-						p = _pixToCoord(pPix);
-					}
-					val = _func(p);
-					if(sign(val) == targDir) {
-						return 1.0;
-					}
+			bool _gridSampleIsolines(vec2 pix, float val) {
+				val = isoRound(val);
+				// skips center position
+				for(int i = 0; i < 4; i++) {
+					vec2 p = _pixToCoord(pix + offsets[i]);
+					float v = isoRound(_func(p));
+					if(floor(v) != val) return true;
 				}
-				return 0.0;
+				return false;
+			}
+			
+			vec4 _valuePlotMethod(vec2 pix) {
+				float val = _func(_pixToCoord(pix));
+				if(_gridSampleIsolines(pix, val)) {
+					return vec4(1.0);
+				}
+				vec3 col = (val > 0.0) ? _color : _invColor;
+				return vec4(mix(vec3(0.73), col, min(1.0, abs(val))), 0.5);
 			}
 			
 			void main() {
-				_fragColor = vec4(_color, _gridSampleMethod(gl_FragCoord.xy));
+				_fragColor = _METHOD(gl_FragCoord.xy + vec2(0.5));
 			}
 		</script>
 		<script src="equation-table.js"></script>
