--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<!-- The first class in the button MUST be an icon, as it gets changed in code -->
 			<td><button id="equation-button" class="bi-graph-up bi nohover btn fs-3"></button></td>
 			<td class="w-100">
-				<textarea id="equation-content" rows="1" type="text" class="form-control"></textarea>
+				<textarea id="equation-content" rows="2" type="text" class="form-control"></textarea>
 			</td>
 			<td class="w-auto"><button id="equation-delete" class="nohover btn text-danger bi bi-x-lg fs-5"></button></td>
 		</tr>
@@ -78,20 +78,46 @@
 				vec2(0.0, 1.0),
 				vec2(1.0, 0.0),
 				vec2(0.0, -1.0),
-				vec2(-1.0, 0.0),
-				vec2(0.0, 0.0)
+				vec2(-1.0, 0.0)
 			);
+			
+			bool testZero(vec2 p1, vec2 p2, float s1, float s2, float vMag) {
+				float low = 0.0;
+				float high = 1.0;
+				float guess = 0.5;
+				float vGuess;
+				//vMag = min(vMag, 1.0);
+				for(int i = 0; i < 10; i++) {
+					vec2 p = mix(p1, p2, guess);
+					vGuess = _func(p);
+					float sGuess = sign(vGuess);
+					if(sGuess == s1) {
+						p1 = p;
+						low = guess;
+					} else {
+						p2 = p;
+						high = guess;
+					}
+					guess = (low + high) / 2.0;
+				}
+				return abs(vGuess) <= vMag;
+			}
 			
 			vec4 _gridSampleMethod(vec2 pix) {
 				float neg = 0.0;
 				float pos = 0.0;
+				vec2 pixCoord = _pixToCoord(pix);
+				float cv = _func(pixCoord);
+				float cs = sign(cv);
 				for(int i = 0; i < 5; i++) {
 					vec2 p = _pixToCoord(pix + offsets[i]);
 					float v = _func(p);
-					if(v <= 0.0) neg += 1.0;
-					if(v >= 0.0) pos += 1.0;
+					float s = sign(v);
+					if(s != sign(cs) && testZero(pixCoord, p, cs, s, (abs(cv) + abs(v)) / 2.0)) {
+						return vec4(_color, 1.0);
+					}
 				}
-				return vec4(_color, (neg * pos) / 4.5);
+				return vec4(0.0);
 			}
 			
 			float isoRound(float v) {
@@ -111,12 +137,28 @@
 			}
 			
 			vec4 _valuePlotMethod(vec2 pix) {
-				float val = _func(_pixToCoord(pix));
-				if(_gridSampleIsolines(pix, val)) {
-					return vec4(1.0);
+				vec2 off;
+				vec3 color = vec3(0.0);
+				int count = 0;
+				for(off.x = -0.5; off.x <= 0.5; off.x += 0.25) {
+					for(off.y = -0.5; off.y <= 0.5; off.y += 0.25) {
+						vec2 pixOff = pix + off * 0.9;
+						float val = _func(_pixToCoord(pixOff));
+						vec3 col = (val > 0.0) ? _color : _invColor;
+						col = mix(vec3(0.0), col, tanh(abs(val/2.0)));
+						if(_gridSampleIsolines(pixOff, _func(_pixToCoord(pixOff)))) {
+							//col = vec3(mix(vec3(1.0), col, 0.25));
+							col = vec3(1.0);
+						}
+						color += col;
+						count++;
+					}
 				}
-				vec3 col = (val > 0.0) ? _color : _invColor;
-				return vec4(mix(vec3(0.73), col, min(1.0, abs(val))), 0.333);
+				color /= float(count);
+				if(_gridSampleIsolines(pix, _func(_pixToCoord(pix)))) {
+					//return vec4(mix(vec3(1.0), color, 0.25), 0.8);
+				}
+				return vec4(color, 0.5);
 			}
 			
 			void main() {
