--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			uniform vec4 _bounds;
 			uniform vec3 _color;
 			uniform vec3 _invColor;
+			uniform float _superSampleDim;
 			
 			out vec4 _fragColor;
 			
@@ -78,7 +79,11 @@
 				vec2(0.0, 1.0),
 				vec2(1.0, 0.0),
 				vec2(0.0, -1.0),
-				vec2(-1.0, 0.0)
+				vec2(-1.0, 0.0),
+				vec2(1.0, 1.0),
+				vec2(1.0, -1.0),
+				vec2(-1.0, 1.0),
+				vec2(-1.0, -1.0)
 			);
 			
 			bool testZero(vec2 p1, vec2 p2, float s1, float s2, float vMag) {
@@ -109,7 +114,7 @@
 				vec2 pixCoord = _pixToCoord(pix);
 				float cv = _func(pixCoord);
 				float cs = sign(cv);
-				for(int i = 0; i < 5; i++) {
+				for(int i = 0; i < 8; i++) {
 					vec2 p = _pixToCoord(pix + offsets[i]);
 					float v = _func(p);
 					float s = sign(v);
@@ -127,8 +132,7 @@
 			
 			bool _gridSampleIsolines(vec2 pix, float val) {
 				val = isoRound(val);
-				// skips center position
-				for(int i = 0; i < 4; i++) {
+				for(int i = 0; i < 8; i++) {
 					vec2 p = _pixToCoord(pix + offsets[i]);
 					float v = isoRound(_func(p));
 					if(floor(v) != val) return true;
@@ -136,30 +140,34 @@
 				return false;
 			}
 			
+			vec4 valuePlotSample(vec2 pix) {
+				float val = _func(_pixToCoord(pix));
+				vec3 col = (val > 0.0) ? _color : _invColor;
+				float alpha = 0.5;
+				col = mix(vec3(0.0), col, tanh(abs(val/2.0)));
+				if(_gridSampleIsolines(pix, _func(_pixToCoord(pix)))) {
+					col = vec3(mix(vec3(1.0), col, 0.2));
+					alpha = 0.9;
+				}
+				return vec4(col, alpha);
+			}
+			
 			vec4 _valuePlotMethod(vec2 pix) {
+				if(_superSampleDim == 0.0) {
+					return valuePlotSample(pix);
+				}
 				vec2 off;
 				vec4 color = vec4(0.0);
 				int count = 0;
-				for(off.x = -0.5; off.x <= 0.5; off.x += 0.25) {
-					for(off.y = -0.5; off.y <= 0.5; off.y += 0.25) {
+				for(off.x = -0.5; off.x <= 0.5; off.x += 1.0 / _superSampleDim) {
+					for(off.y = -0.5; off.y <= 0.5; off.y += 1.0 / _superSampleDim) {
 						vec2 pixOff = pix + off * 0.9;
-						float val = _func(_pixToCoord(pixOff));
-						vec3 col = (val > 0.0) ? _color : _invColor;
-						float alpha = 0.5;
-						col = mix(vec3(0.0), col, tanh(abs(val/2.0)));
-						if(_gridSampleIsolines(pixOff, _func(_pixToCoord(pixOff)))) {
-							col = vec3(mix(vec3(1.0), col, 0.2));
-							alpha = 0.9;
-						}
-						color += vec4(col, alpha);
+						vec4 col = valuePlotSample(pixOff);
+						color += col;
 						count++;
 					}
 				}
-				color /= float(count);
-				if(_gridSampleIsolines(pix, _func(_pixToCoord(pix)))) {
-					//return vec4(mix(vec3(1.0), color, 0.25), 0.8);
-				}
-				return color;
+				return color / float(count);
 			}
 			
 			void main() {
